--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,15 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.2'
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.6.1'
+
+    // Volley für einfache HTTP-Requests
     implementation 'com.android.volley:volley:1.2.1'
 
-    // Kotlin Serialization
+    // Kotlin JSON Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
     testImplementation 'junit:junit:4.13.2'
