--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,21 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.FahrradverleihAndroid"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
+        <activity
+            android:name=".view.startup.StartupActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            >
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
 
     </application>
 
