🎨 Styling: MapFragment 🎨 Styling: NeueAusleiheDialogFragment 🎨 Styling: RadAuswahlDialogFragment 🎨 Styling: MapFragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     // Google Maps for Android
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
